Proyecto real con html y css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mi Primer html</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blogpost</h1>
+    <h1>Aqui vamos a hacer un blogpost de la EMI</h1>
     <p>Y este es el parrafo del inicio</p>
 
 </body>
