--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Mi Primer html</title>
+    <title>Mi Primer html--</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blogpost de la EMI</h1>
-    <p>Y este es el parrafo del inicio</p>
-
+    <div id="container">
+        <div id="post">
+            <h1>Aqui vamos a hacer un blogpost de la EMI</h1>
+            <p>Y este es el parrafo del inicio</p>
+        </div>
+    </div>
 </body>
 </html>
