Agregamos el logo

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <img id="logo" src="./assets/descarga.jpeg" alt="logo de una caca">
+            
+            <span id="tagline">Blog de taller</span>
+        </div>
         <div id="post">
-            <h1>Aqui vamos a hacer un blogpost de la EMI</h1>
+            <h1>Blog del post</h1>
             <p>Y este es el parrafo del inicio</p>
         </div>
     </div>
