--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <img id="logo" src="./assets/descarga (1).jpeg" alt="logo de una caca">
+            <img id="logo" src="./assets/descarga.jpeg" alt="logo de una caca">
             
             <span id="tagline">Blog de taller</span>
         </div>
